[tool.poetry]
name = "python-socket-programming"
version = "0.1.0"
description = "This is an example repository for studying python socket system."
authors = ["tmdgusya"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
